# WebViewTemplate

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
web/: index.html
